--- a/app/src/main/java/fridge/tertainment/rsc/db.properties
+++ b/app/src/main/java/fridge/tertainment/rsc/db.properties
@@ -2,6 +2,6 @@
 
 #Properties for DB connection.
 
-jdbc.url=jdbc:mysql://localhost:3306/opskriftsdatabase
+jdbc.url=jdbc:mysql://localhost:3306/recipe_database
 jdbc.username=root
 jdbc.password=gruppe6aaut
