Changed prefered java version to 21

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 application {
     // Define the main class for the application.
     mainClass = 'fridge.tertainment.App'
